<resources>
    <string name="app_name">Android-Authentication-using-Volley-Java</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="address">address</string>
    <string name="mobile">mobile</string>
    <string name="email">email</string>
    <string name="submit">submit</string>
    <string name="username">Username</string>
</resources>