<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0692B8"

    tools:context=".Register_activity">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="#e8e8e7"
            android:orientation="horizontal">


            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#2582C5"
                android:layout_marginStart="25dp"
                android:textSize="18sp"
                android:textStyle="bold"

                android:layout_gravity="center_horizontal|center_vertical"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="250dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@mipmap/tb" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/usr"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/editext_bg_gray"
                android:hint="@string/username"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/eml"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/editext_bg_gray"
                android:hint="@string/email"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobr"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/editext_bg_gray"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/adr"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/editext_bg_gray"
                android:hint="@string/address"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passr"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/editext_bg_gray"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <Button
                android:id="@+id/subbut"
                android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn"
                android:text="@string/submit"
                android:textColor="#fff" />

        </LinearLayout>



    </LinearLayout>



</ScrollView>